# logsalot

./: .gitignore  Cargo.toml
migrations/: 20240202160913_initial-migration.sql
src/: client.rs  commands.rs  logging.rs  main.rs
