[package]
name = "logsalot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
env_logger = "0.11.1"
poise = "0.6.1"
serenity = { version = "0.12.0", features = ["cache"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio", "tls-native-tls", "sqlite", "migrate", "macros"] }
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread"] }
